# rust-vue

./: .gitignore  Cargo.toml  README.md  build.rs  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: build-rust.yml  build-vue.yml  build.yml
src/api/: lib.rs
src/protobuf/: items.ts  items_pb.js
src/ui/: App.vue  main.ts
